--- a/notebooks/extraction.ipynb
+++ b/notebooks/extraction.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "ab366c5a",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,9 @@
     "import os\n",
     "from acled_conflict_analysis import processing\n",
     "from acled_conflict_analysis import extraction\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "# Import the OAuth authentication function\n",
+    "from acled_conflict_analysis.acled_auth import *"
    ]
   },
   {
@@ -31,37 +33,51 @@
    "id": "daab7b0b",
    "metadata": {},
    "source": [
-    "Store your credentials in your local machine if you haven't already and pull them directly into your code"
+    "Enter your ACLED credentials in the cell below. These will be saved securely for future use."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "c3d51367",
-   "metadata": {
-    "tags": [
-     "remove-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "#extraction.save_acled_credentials(email, key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "00b1ec0e",
+   "execution_count": 2,
+   "id": "1468bbd5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Credentials set for: ssarva@worldbank.org\n"
+     ]
+    }
+   ],
    "source": [
-    "os.environ['ACLED_EMAIL'] = extraction.get_acled_credentials()[0]\n",
-    "os.environ['ACLED_KEY'] = extraction.get_acled_credentials()[1]"
+    "# This is how users would actually input their credentials\n",
+    "# The credentials will be securely saved for future use\n",
+    "\n",
+    "import getpass\n",
+    "\n",
+    "# Input your ACLED credentials\n",
+    "acled_email = input(\"Enter your ACLED email: \")\n",
+    "acled_password = getpass.getpass(\"Enter your ACLED password: \")\n",
+    "\n",
+    "print(f\"✅ Credentials set for: {acled_email}\")\n",
+    "\n",
+    "# Now you can use either function for data extraction:\n",
+    "# 1. acled_api_with_credentials() - uses the credentials you just entered\n",
+    "# 2. acled_api() - uses stored OAuth tokens (more efficient for repeated calls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99ada992",
+   "metadata": {},
+   "source": [
+    "## Set up countries and date range for data extraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "0ca31416",
    "metadata": {},
    "outputs": [],
@@ -73,80 +89,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "6dc48f75",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧪 Testing acled_api function for duplicate prints...\n",
+      "🔄 Using cached OAuth token\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\WBG\\Anaconda3\\envs\\acled\\Lib\\site-packages\\urllib3\\connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'api.acleddata.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "/Users/ssarva/Library/CloudStorage/OneDrive-WBG/Documents/acled_conflict_analysis/.venv/lib/python3.13/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'acleddata.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
       "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Successfully retrieved 240 records\n"
      ]
     }
    ],
    "source": [
-    "extracted_date = datetime.today().strftime('%Y%m%d')\n",
+    "# Test single call to check for duplicate prints\n",
+    "print(\"🧪 Testing acled_api function for duplicate prints...\")\n",
+    "\n",
     "data = extraction.acled_api(\n",
-    "    email_address=os.environ.get(\"ACLED_EMAIL\"),\n",
-    "    access_key=os.environ.get(\"ACLED_KEY\"),\n",
-    "    countries=countries_of_interest,\n",
-    "    start_date=START_DATE,\n",
-    "    end_date=END_DATE\n",
-    ")"
+    "    countries=[\"Sudan\"],\n",
+    "    start_date=\"2023-01-01\",\n",
+    "    end_date=\"2023-01-31\"  # Small date range for quick test\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "cffefdd3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Alternative Method 2: Using credentials directly (for interactive use)\n",
+    "# This method requires you to enter credentials each time but is useful for testing\n",
+    "\n",
+    "# Uncomment and run if you want to use direct credentials:\n",
+    "# data_with_creds = extraction.acled_api_with_credentials(\n",
+    "#     email=acled_email,\n",
+    "#     password=acled_password, \n",
+    "#     countries=countries_of_interest,\n",
+    "#     start_date=START_DATE,\n",
+    "#     end_date=END_DATE\n",
+    "# )\n",
+    "\n",
+    "# Let's process the data we extracted\n",
     "processing.data_type_conversion(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "f9460478",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'20250513'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "extracted_date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "51a0fe62",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(729)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "extraction.get_iso_code(countries_of_interest)[0]"
    ]
   },
   {
@@ -162,7 +164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "acled",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
