--- a/notebooks/extraction.ipynb
+++ b/notebooks/extraction.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ab366c5a",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "1468bbd5",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Credentials set for: ssarva@worldbank.org\n"
+      "✅ Credentials set for: \n"
      ]
     }
    ],
