increase API call limit

--- a/notebooks/extraction.ipynb
+++ b/notebooks/extraction.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "ab366c5a",
    "metadata": {},
    "outputs": [],
@@ -77,19 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "0ca31416",
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries_of_interest = [\"Sudan\"]\n",
+    "countries_of_interest = [\"Sudan\", \"Somalia\"]\n",
     "START_DATE = \"2023-01-01\"\n",
     "END_DATE = datetime.today().strftime('%Y-%m-%d')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "6dc48f75",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Successfully retrieved 240 records\n"
+      "✅ Successfully retrieved 642 records\n"
      ]
     }
    ],
@@ -122,10 +122,31 @@
     "print(\"🧪 Testing acled_api function for duplicate prints...\")\n",
     "\n",
     "data = extraction.acled_api(\n",
-    "    countries=[\"Sudan\"],\n",
+    "    countries=countries_of_interest,\n",
     "    start_date=\"2023-01-01\",\n",
     "    end_date=\"2023-01-31\"  # Small date range for quick test\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7a134418",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Somalia', 'Sudan'], dtype=object)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['country'].unique()"
    ]
   },
   {
