adding country codes to the API

--- a/notebooks/extraction.ipynb
+++ b/notebooks/extraction.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "ab366c5a",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "1468bbd5",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Credentials set for: \n"
+      "✅ Credentials set for: ssarva@worldbank.org\n"
      ]
     }
    ],
@@ -77,19 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0ca31416",
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries_of_interest = [\"Sudan\", \"Somalia\"]\n",
-    "START_DATE = \"2023-01-01\"\n",
+    "countries_of_interest = [\"Sudan\", \"Somalia\", \"\"]\n",
+    "START_DATE = \"2010-01-01\"\n",
     "END_DATE = datetime.today().strftime('%Y-%m-%d')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "6dc48f75",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Successfully retrieved 642 records\n"
+      "✅ Successfully retrieved 1981264 records\n"
      ]
     }
    ],
@@ -122,9 +122,9 @@
     "print(\"🧪 Testing acled_api function for duplicate prints...\")\n",
     "\n",
     "data = extraction.acled_api(\n",
-    "    countries=countries_of_interest,\n",
-    "    start_date=\"2023-01-01\",\n",
-    "    end_date=\"2023-01-31\"  # Small date range for quick test\n",
+    "    region=[1,2,3,4,5,6,7,8,9,11,12],\n",
+    "    start_date=START_DATE,\n",
+    "    end_date=END_DATE  # Small date range for quick test\n",
     ")\n"
    ]
   },
